--- a/package.json
+++ b/package.json
@@ -8,20 +8,31 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@types/bluebird": "^3.5.20",
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
+    "@types/cheerio": "^0.22.7",
+    "@types/js-yaml": "^3.11.1",
     "@types/lodash": "^4.14.107",
     "@types/mocha": "^5.2.0",
+    "@types/request": "^2.47.0",
+    "@types/request-promise": "^4.1.41",
     "@types/sinon-chai": "^2.7.29",
     "@types/source-map-support": "^0.4.0",
+    "@types/ws": "^4.0.2",
     "awesome-typescript-loader": "^5.0.0",
+    "aws-sdk": "^2.226.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "cheerio": "^1.0.0-rc.2",
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "^3.0.1",
+    "js-yaml": "^3.11.0",
     "lodash": "^4.17.5",
     "mocha": "^5.1.1",
     "nyc": "^11.7.1",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2",
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
     "source-map-support": "^0.5.4",
@@ -31,6 +42,7 @@
     "typescript": "^2.8.3",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.15"
+    "webpack-cli": "^2.0.15",
+    "ws": "^5.1.1"
   }
 }
