--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nyc": "^11.7.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
+    "rxjs": "^5.5.10",
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
     "source-map-support": "^0.5.4",
