--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
+    "@types/bunyan": "^1.8.4",
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
     "@types/cheerio": "^0.22.7",
@@ -22,6 +23,7 @@
     "@types/ws": "^4.0.2",
     "awesome-typescript-loader": "^5.0.0",
     "aws-sdk": "^2.226.1",
+    "bunyan": "^1.8.12",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "cheerio": "^1.0.0-rc.2",
