checkout submodules, add pipeline badge

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,15 @@
 build:
   image: apextoaster/node
   stage: build
+  tags:
+    - runner:k8s
+
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
   script:
     - yarn
     - make strict
-  tags:
-    - runner:k8s
+
   artifacts:
     expire_in: 1 week
     paths:
