--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,9 @@ build:
 
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
+  before_script:
+    - ssh-keyscan github.com >> ~/.ssh/known_hosts
+    - ssh-keyscan git.apextoaster.com >> ~/.ssh/known_hosts
   script:
     - yarn
     - make strict
