--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ build:
   tags:
     - runner:k8s
 
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
   script:
-    - git submodule init
-    - git submodule update
     - yarn
     - make strict
 
