--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/so-client"]
 	path = vendor/so-client
-	url = git@github.com:xbenjii/so-client.git
+	url = https://github.com/xbenjii/so-client.git
