--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/chai": "^4.1.3",
     "@types/chai-as-promised": "^7.1.0",
     "@types/cheerio": "^0.22.7",
+    "@types/escape-html": "^0.0.20",
     "@types/js-yaml": "^3.11.1",
     "@types/lodash": "^4.14.107",
     "@types/mocha": "^5.2.0",
@@ -27,6 +28,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "cheerio": "^1.0.0-rc.2",
+    "escape-html": "^1.0.3",
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "js-yaml": "^3.11.0",
