remove tags from lex input, add yaml parser to default config

--- a/config/isolex.yml
+++ b/config/isolex.yml
@@ -29,6 +29,9 @@ bot:
       region: us-east-1
       tags: ['--lex']
 
+    yaml:
+      tags: ['--yaml']
+
   stack:
     account:
       email: yourname@email.com
