add a time handler, update command to handle object data, potentially break lex slots

--- a/config/isolex.yml
+++ b/config/isolex.yml
@@ -14,6 +14,10 @@ bot:
       pattern: >-
         @{{cmd.from.userName}}: {{cmd.data.message}} ({{cmd.name}})
 
+    time:
+      locale: en-US
+      zone: UTC
+
   log:
     level: debug
     name: isolex
