add later, start running intervals

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cheerio": "^0.22.7",
     "@types/escape-html": "^0.0.20",
     "@types/js-yaml": "^3.11.1",
+    "@types/later": "^1.2.4",
     "@types/lodash": "^4.14.107",
     "@types/mocha": "^5.2.0",
     "@types/request": "^2.47.0",
@@ -32,6 +33,7 @@
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "js-yaml": "^3.11.0",
+    "later": "^1.2.0",
     "lodash": "^4.17.5",
     "mocha": "^5.1.1",
     "nyc": "^11.7.1",
