move kebab case into module, continue abstracting templates, remove source map dep

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -24,8 +24,7 @@
       "chai-as-promised",
       "lodash",
       "mocha",
-      "sinon-chai",
-      "source-map-support"
+      "sinon-chai"
     ],
     "typeRoots": [
       "node_modules/@types",
