add weather handler and request dep

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -24,6 +24,8 @@
       "chai-as-promised",
       "lodash",
       "mocha",
+      "request",
+      "request-promise-native",
       "sinon-chai"
     ],
     "typeRoots": [
