--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mocha": "^5.2.0",
     "@types/request": "^2.47.0",
     "@types/request-promise": "^4.1.41",
+    "@types/request-promise-native": "^1.0.14",
     "@types/sinon-chai": "^2.7.29",
     "@types/source-map-support": "^0.4.0",
     "@types/ws": "^4.0.2",
@@ -40,6 +41,7 @@
     "nyc": "^11.7.1",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
+    "request-promise-native": "^1.0.5",
     "rxjs": "^5.5.10",
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
