--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai-as-promised": "^7.1.1",
     "cheerio": "^1.0.0-rc.2",
     "cron": "^1.3.0",
+    "discord.js": "^11.3.2",
     "escape-html": "^1.0.3",
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "^3.0.1",
