--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -4,48 +4,62 @@
 
 filters:
   - type: user-filter
-    ignore:
-      - yourself
+    ignore: []
 
 handlers:
+  - type: reaction-handler
+    name: test_reaction
+    field: body
+    reactions:
+      match: ["emoji"]
+
   - type: time-handler
     locale: en-US
     zone: UTC
 
+  - type: weather-handler
+    api:
+      key: api-key
+      root: https://api.openweathermap.org/data/2.5/
+    template: >-
+      {{weather.name}} is {{weather.main.temp}} with {{weather.wind.speed}} wind
+      and {{#each weather.weather}}{{this.description}}{{/each}}!
+
   - type: echo-handler
-    pattern: >-
-      {{reply cmd.from}}: {{cmd.data.message}} ({{cmd.name}})
+    template: >-
+      {{reply cmd.context}}: {{cmd.data.message}} ({{cmd.name}})
 
 intervals:
-  - cron: '*/15 * * * * *'
+  - cron: '* * * * *'
     data: {}
+
+listeners:
+  - type: discord-listener
+    token: discord-token
 
 logger:
   level: debug
   name: isolex
 
 parsers:
+  - type: echo-parser
+    field: body
+    name: test_reaction
+    tags:
+      - match
+
   - type: lex-parser
     bot:
       name: isolex
       alias: test
     account:
-      accessKey: aws-access-key
-      secretKey: aws-secret-key
+      accessKey: access-key
+      secretKey: secret-key
     region: us-east-1
     tags:
-      - '--lex'
+      - '!!lex'
 
   - type: yaml-parser
     tags:
-      - '--json'
-      - '--yaml'
-
-stack:
-  account:
-    email: your.name@email.com
-    password: 'password'
-  rate:
-    base: 100
-    grow: 2000
-  rooms: [1, 17]
+      - '!!json'
+      - '!!yaml'
