add math handler

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -23,6 +23,7 @@
     "types": [
       "chai-as-promised",
       "lodash",
+      "mathjs",
       "mocha",
       "request",
       "request-promise-native",
