--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/escape-html": "^0.0.20",
     "@types/js-yaml": "^3.11.1",
     "@types/lodash": "^4.14.107",
+    "@types/mathjs": "^3.20.0",
     "@types/mocha": "^5.2.0",
     "@types/request": "^2.47.0",
     "@types/request-promise": "^4.1.41",
@@ -37,6 +38,7 @@
     "istanbul-instrumenter-loader": "^3.0.1",
     "js-yaml": "^3.11.0",
     "lodash": "^4.17.5",
+    "mathjs": "^4.2.2",
     "mocha": "^5.1.1",
     "noicejs": "^2.1.0",
     "nyc": "^11.7.1",
