--- a/docs/isolex.yml
+++ b/docs/isolex.yml
@@ -7,6 +7,11 @@ filters:
     ignore: []
 
 handlers:
+  - type: math-handler
+    matrix: Array
+    name: test_math
+    number: BigNumber
+
   - type: reaction-handler
     name: test_reaction
     field: body
@@ -81,3 +86,9 @@ parsers:
     regexp: '([0-9]+)d([0-9]+)'
     tags:
       - '!!dice'
+
+  - type: echo-parser
+    field: args
+    name: test_math
+    tags:
+      - '!!math'
