add storage with typeorm, refactor entities to use factory fn

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "allowSyntheticDefaultImports": false,
     "baseUrl": "../",
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
     "jsx": "react",
