--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mocha": "^5.1.1",
     "noicejs": "^2.1.0",
     "nyc": "^11.7.1",
+    "reflect-metadata": "^0.1.12",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5",
@@ -49,9 +50,11 @@
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
     "source-map-support": "^0.5.4",
+    "sqlite3": "^4.0.0",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.6.0",
     "typedoc": "^0.11.1",
+    "typeorm": "^0.2.5",
     "typescript": "^2.8.3",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
