handle quotes and brackets for split parser, monospace math output

--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -28,7 +28,8 @@
       "mocha",
       "request",
       "request-promise-native",
-      "sinon-chai"
+      "sinon-chai",
+      "string-split"
     ],
     "typeRoots": [
       "../node_modules/@types",
