--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
     "source-map-support": "^0.5.5",
+    "split-string": "^5.0.4",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.6.0",
     "typedoc": "^0.11.1",
