--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/request-promise-native": "^1.0.14",
     "@types/sinon-chai": "^2.7.29",
     "@types/source-map-support": "^0.4.0",
+    "@types/uuid": "^3.4.3",
     "@types/ws": "^4.0.2",
     "awesome-typescript-loader": "^5.0.0",
     "aws-sdk": "^2.226.1",
