--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/ws": "^4.0.2",
     "awesome-typescript-loader": "^5.0.0",
     "aws-sdk": "^2.226.1",
+    "bufferutil": "^3.0.5",
     "bunyan": "^1.8.12",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
@@ -62,6 +63,7 @@
     "typedoc": "^0.11.1",
     "typeorm": "^0.2.5",
     "typescript": "^2.8.3",
+    "utf-8-validate": "^4.0.2",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.15",
