--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.107",
     "@types/mathjs": "^3.20.0",
     "@types/mocha": "^5.2.0",
+    "@types/node-emoji": "^1.8.0",
     "@types/request": "^2.47.0",
     "@types/request-promise": "^4.1.41",
     "@types/request-promise-native": "^1.0.14",
@@ -47,6 +48,7 @@
     "lodash": "^4.17.5",
     "mathjs": "^4.2.2",
     "mocha": "^5.1.1",
+    "node-emoji": "^1.8.1",
     "noicejs": "^2.1.0",
     "nyc": "^11.7.1",
     "reflect-metadata": "^0.1.12",
