--- a/package.json
+++ b/package.json
@@ -56,12 +56,17 @@
     "request-promise": "^4.2.2",
     "request-promise-native": "^1.0.5",
     "rxjs": "^5.5.10",
+    "rxjs-tslint-rules": "^4.1.1",
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0",
     "source-map-support": "^0.5.5",
     "split-string": "^5.0.4",
     "tslint": "^5.9.1",
+    "tslint-consistent-codestyle": "^1.13.0",
+    "tslint-etc": "^1.2.2",
     "tslint-loader": "^3.6.0",
+    "tslint-microsoft-contrib": "^5.0.3",
+    "tslint-sonarts": "^1.6.0",
     "typedoc": "^0.11.1",
     "typeorm": "^0.2.5",
     "typescript": "^2.8.3",
