--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cron": "^1.3.0",
     "@types/escape-html": "^0.0.20",
     "@types/js-yaml": "^3.11.1",
+    "@types/jsonpath": "^0.2.0",
     "@types/lodash": "^4.14.107",
     "@types/mathjs": "^3.20.0",
     "@types/mocha": "^5.2.0",
@@ -45,6 +46,7 @@
     "ineeda": "^0.12.0-alpha.0",
     "istanbul-instrumenter-loader": "^3.0.1",
     "js-yaml": "^3.11.0",
+    "jsonpath": "^1.0.0",
     "lodash": "^4.17.5",
     "mathjs": "^4.2.2",
     "mocha": "^5.1.1",
