emit default message for missing discord reactions (fixes #23)

--- a/package.json
+++ b/package.json
@@ -64,11 +64,12 @@
     "source-map-support": "^0.5.5",
     "split-string": "^5.0.4",
     "tslint": "^5.9.1",
+    "tslint-clean-code": "^0.2.7",
     "tslint-consistent-codestyle": "^1.13.0",
     "tslint-etc": "^1.2.2",
     "tslint-loader": "^3.6.0",
     "tslint-microsoft-contrib": "^5.0.3",
-    "tslint-sonarts": "^1.6.0",
+    "tslint-sonarts": "^1.7.0",
     "typedoc": "^0.11.1",
     "typeorm": "^0.2.5",
     "typescript": "^2.8.3",
