--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "isolex",
-  "version": "0.1.0",
-  "description": "isolex SO chat bot",
+  "version": "0.2.0",
+  "description": "isolex chat bot",
   "main": "out/main-bundle.js",
   "repository": "https://github.com/ssube/isolex",
   "author": "ssube",
@@ -14,69 +14,69 @@
     "uws": "^9.148.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.20",
-    "@types/bunyan": "^1.8.4",
-    "@types/chai": "^4.1.3",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/cheerio": "^0.22.7",
-    "@types/cron": "^1.3.0",
+    "@types/bluebird": "~3.5",
+    "@types/bunyan": "~1.8",
+    "@types/chai": "~4.1",
+    "@types/chai-as-promised": "~7.1",
+    "@types/cheerio": "~0.22",
+    "@types/cron": "~1.3",
     "@types/escape-html": "^0.0.20",
-    "@types/js-yaml": "^3.11.1",
-    "@types/jsonpath": "^0.2.0",
-    "@types/lodash": "^4.14.109",
-    "@types/mathjs": "^3.21.0",
-    "@types/mocha": "^5.2.2",
-    "@types/node-emoji": "^1.8.0",
-    "@types/request": "^2.47.0",
-    "@types/request-promise": "^4.1.41",
-    "@types/request-promise-native": "^1.0.15",
-    "@types/sinon-chai": "^2.7.32",
-    "@types/source-map-support": "^0.4.1",
-    "@types/uuid": "^3.4.3",
-    "@types/ws": "^5.1.2",
-    "awesome-typescript-loader": "^5.0.0",
-    "aws-sdk": "^2.255.1",
-    "bufferutil": "^3.0.5",
-    "bunyan": "^1.8.12",
-    "chai": "^4.1.2",
-    "chai-as-promised": "^7.1.1",
+    "@types/js-yaml": "~3.11",
+    "@types/jsonpath": "~0.2",
+    "@types/lodash": "~4.14",
+    "@types/mathjs": "~4.4.3",
+    "@types/mocha": "~5.2",
+    "@types/node-emoji": "~1.8",
+    "@types/request": "~2.48.1",
+    "@types/request-promise": "~4.1",
+    "@types/request-promise-native": "~1.0",
+    "@types/sinon-chai": "~3.2.1",
+    "@types/source-map-support": "~0.4",
+    "@types/uuid": "~3.4",
+    "@types/ws": "~5.1",
+    "awesome-typescript-loader": "~5.0",
+    "aws-sdk": "~2.360",
+    "bufferutil": "~3.0",
+    "bunyan": "~1.8",
+    "chai": "~4.2",
+    "chai-as-promised": "~7.1",
     "cheerio": "^1.0.0-rc.2",
-    "cron": "^1.3.0",
-    "discord.js": "^11.3.2",
-    "escape-html": "^1.0.3",
+    "cron": "~1.5",
+    "discord.js": "~11.4",
+    "escape-html": "~1.0",
     "ineeda": "^0.12.0-alpha.0",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "js-yaml": "^3.12.0",
-    "lodash": "^4.17.5",
-    "mathjs": "^4.4.2",
-    "mocha": "^5.2.0",
-    "node-emoji": "^1.8.1",
-    "noicejs": "^2.1.0",
-    "nyc": "^12.0.2",
-    "reflect-metadata": "^0.1.12",
-    "request": "^2.87.0",
-    "request-promise": "^4.2.2",
-    "request-promise-native": "^1.0.5",
-    "rxjs": "^5.5.10",
-    "rxjs-tslint-rules": "^4.4.1",
-    "sinon": "^6.0.0",
-    "sinon-chai": "^3.1.0",
-    "source-map-support": "^0.5.6",
-    "split-string": "^5.0.4",
-    "tslint": "^5.9.1",
-    "tslint-clean-code": "^0.2.7",
-    "tslint-consistent-codestyle": "^1.13.1",
-    "tslint-etc": "^1.2.2",
-    "tslint-loader": "^3.6.0",
-    "tslint-microsoft-contrib": "^5.0.3",
-    "tslint-sonarts": "^1.7.0",
-    "typedoc": "^0.11.1",
-    "typeorm": "^0.2.7",
-    "typescript": "^2.8.3",
-    "utf-8-validate": "^4.0.2",
-    "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.0.4",
-    "ws": "^5.2.0"
+    "istanbul-instrumenter-loader": "~3.0",
+    "js-yaml": "~3.12",
+    "lodash": "~4.17",
+    "mathjs": "~5.2.3",
+    "mocha": "~5.2",
+    "node-emoji": "~1.8",
+    "noicejs": "~2.1",
+    "nyc": "~13.1.0",
+    "reflect-metadata": "~0.1",
+    "request": "~2.88.0",
+    "request-promise": "~4.2",
+    "request-promise-native": "~1.0",
+    "rxjs": "~5.5",
+    "rxjs-tslint-rules": "~4.12.0",
+    "sinon": "~6.0",
+    "sinon-chai": "~3.2.0",
+    "source-map-support": "~0.5",
+    "split-string": "~5.0",
+    "tslint": "~5.11.0",
+    "tslint-clean-code": "~0.2",
+    "tslint-consistent-codestyle": "~1.14.1",
+    "tslint-etc": "~1.2",
+    "tslint-loader": "~3.6",
+    "tslint-microsoft-contrib": "~5.2.1",
+    "tslint-sonarts": "~1.8.0",
+    "typedoc": "~0.13.0",
+    "typeorm": "~0.2",
+    "typescript": "~3.1",
+    "utf-8-validate": "~4.0",
+    "webpack": "~4.26.0",
+    "webpack-bundle-analyzer": "~3.0.3",
+    "webpack-cli": "~3.1.2",
+    "ws": "~5.2"
   }
 }
