--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "uws": "^9.148.0"
   },
   "devDependencies": {
+    "@kubernetes/client-node": "^0.7.1",
     "@types/bluebird": "~3.5",
     "@types/bunyan": "~1.8",
     "@types/chai": "~4.1",
@@ -33,6 +34,7 @@
     "@types/sinon-chai": "~3.2.1",
     "@types/source-map-support": "~0.4",
     "@types/uuid": "~3.4",
+    "@types/websocket": "^0.0.40",
     "@types/ws": "~6.0.1",
     "awesome-typescript-loader": "~5.2.1",
     "aws-sdk": "~2.360",
