--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -10,7 +10,8 @@
     "jsx": "react",
     "lib": [
       "dom",
-      "es2017"
+      "es2017",
+      "esnext.asynciterable"
     ],
     "module": "es6",
     "moduleResolution": "node",
