--- a/package.json
+++ b/package.json
@@ -8,38 +8,38 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "grpc": "^1.11.3",
-    "jsonpath": "^1.0.0",
-    "sqlite3": "^4.0.0",
-    "uws": "^9.148.0"
+    "grpc": "~1.16.1",
+    "jsonpath": "~1.0",
+    "sqlite3": "~4.0",
+    "uws": "~9.148"
   },
   "devDependencies": {
-    "@kubernetes/client-node": "^0.7.1",
-    "@slack/client": "^4.8.0",
+    "@kubernetes/client-node": "^0.7.0",
+    "@slack/client": "~4.8",
     "@types/bluebird": "~3.5",
     "@types/bunyan": "~1.8",
     "@types/chai": "~4.1",
     "@types/chai-as-promised": "~7.1",
-    "@types/cheerio": "~0.22",
+    "@types/cheerio": "^0.22.0",
     "@types/cron": "~1.3",
     "@types/escape-html": "^0.0.20",
     "@types/js-yaml": "~3.11",
-    "@types/jsonpath": "~0.2",
+    "@types/jsonpath": "^0.2.0",
     "@types/lodash": "~4.14",
-    "@types/mathjs": "~4.4.3",
+    "@types/mathjs": "~4.4",
     "@types/mocha": "~5.2",
     "@types/node-emoji": "~1.8",
-    "@types/request": "~2.48.1",
+    "@types/request": "~2.48",
     "@types/request-promise": "~4.1",
     "@types/request-promise-native": "~1.0",
-    "@types/sinon-chai": "~3.2.1",
-    "@types/source-map-support": "~0.4",
+    "@types/sinon-chai": "~3.2",
+    "@types/source-map-support": "^0.4.0",
     "@types/uuid": "~3.4",
     "@types/websocket": "^0.0.40",
-    "@types/ws": "~6.0.1",
-    "awesome-typescript-loader": "~5.2.1",
+    "@types/ws": "~6.0",
+    "awesome-typescript-loader": "~5.2",
     "aws-sdk": "~2.360",
-    "bufferutil": "~4.0.0",
+    "bufferutil": "~4.0",
     "bunyan": "~1.8",
     "chai": "~4.2",
     "chai-as-promised": "~7.1",
@@ -51,35 +51,35 @@
     "istanbul-instrumenter-loader": "~3.0",
     "js-yaml": "~3.12",
     "lodash": "~4.17",
-    "mathjs": "~5.2.3",
+    "mathjs": "~5.2",
     "mocha": "~5.2",
     "node-emoji": "~1.8",
-    "noicejs": "~2.2.1",
-    "nyc": "~13.1.0",
-    "reflect-metadata": "~0.1",
-    "request": "~2.88.0",
+    "noicejs": "~2.2",
+    "nyc": "~13.1",
+    "reflect-metadata": "^0.1.0",
+    "request": "~2.88",
     "request-promise": "~4.2",
     "request-promise-native": "~1.0",
-    "rxjs": "~6.3.3",
-    "rxjs-tslint-rules": "~4.12.0",
-    "sinon": "~7.1.1",
-    "sinon-chai": "~3.2.0",
-    "source-map-support": "~0.5",
-    "split-string": "~6.0.0",
-    "tslint": "~5.11.0",
-    "tslint-clean-code": "~0.2",
-    "tslint-consistent-codestyle": "~1.14.1",
+    "rxjs": "~6.3",
+    "rxjs-tslint-rules": "~4.12",
+    "sinon": "~7.1",
+    "sinon-chai": "~3.2",
+    "source-map-support": "^0.5.0",
+    "split-string": "~6.0",
+    "tslint": "~5.11",
+    "tslint-clean-code": "^0.2.0",
+    "tslint-consistent-codestyle": "~1.14",
     "tslint-etc": "~1.2",
     "tslint-loader": "~3.6",
-    "tslint-microsoft-contrib": "~5.2.1",
-    "tslint-sonarts": "~1.8.0",
-    "typedoc": "~0.13.0",
-    "typeorm": "~0.2",
+    "tslint-microsoft-contrib": "~5.2",
+    "tslint-sonarts": "~1.8",
+    "typedoc": "^0.13.0",
+    "typeorm": "^0.2.0",
     "typescript": "~3.1",
-    "utf-8-validate": "~5.0.1",
-    "webpack": "~4.26.0",
-    "webpack-bundle-analyzer": "~3.0.3",
-    "webpack-cli": "~3.1.2",
-    "ws": "~6.1.2"
+    "utf-8-validate": "~5.0",
+    "webpack": "~4.26",
+    "webpack-bundle-analyzer": "~3.0",
+    "webpack-cli": "~3.1",
+    "ws": "~6.1"
   }
 }
